--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Dongle&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&family=Dongle&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>David Sandoval: Portfolio</title>
@@ -32,8 +33,6 @@
                     <h2 id="my-name">David Sandoval</h2>
                 </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="1" d="M0,224L12.6,234.7C25.3,245,51,267,76,234.7C101.1,203,126,117,152,85.3C176.8,53,202,75,227,74.7C252.6,75,278,53,303,74.7C328.4,96,354,160,379,154.7C404.2,149,429,75,455,85.3C480,96,505,192,531,218.7C555.8,245,581,203,606,154.7C631.6,107,657,53,682,42.7C707.4,32,733,64,758,117.3C783.2,171,808,245,834,245.3C858.9,245,884,171,909,133.3C934.7,96,960,96,985,122.7C1010.5,149,1036,203,1061,202.7C1086.3,203,1112,149,1137,112C1162.1,75,1187,53,1213,37.3C1237.9,21,1263,11,1288,42.7C1313.7,75,1339,149,1364,154.7C1389.5,160,1415,96,1427,64L1440,32L1440,0L1427.4,0C1414.7,0,1389,0,1364,0C1338.9,0,1314,0,1288,0C1263.2,0,1238,0,1213,0C1187.4,0,1162,0,1137,0C1111.6,0,1086,0,1061,0C1035.8,0,1011,0,985,0C960,0,935,0,909,0C884.2,0,859,0,834,0C808.4,0,783,0,758,0C732.6,0,707,0,682,0C656.8,0,632,0,606,0C581.1,0,556,0,531,0C505.3,0,480,0,455,0C429.5,0,404,0,379,0C353.7,0,328,0,303,0C277.9,0,253,0,227,0C202.1,0,177,0,152,0C126.3,0,101,0,76,0C50.5,0,25,0,13,0L0,0Z"></path></svg>    </div>
-
             <div id="second-page">
                 <div id="second-pageoutline">
                     <div id="skills-projects">
@@ -69,7 +68,6 @@
                         </div>
                     </div>
                 </div>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#554238" fill-opacity="1" d="M0,288L6.2,256C12.3,224,25,160,37,154.7C49.2,149,62,203,74,197.3C86.2,192,98,128,111,122.7C123.1,117,135,171,148,165.3C160,160,172,96,185,85.3C196.9,75,209,117,222,122.7C233.8,128,246,96,258,80C270.8,64,283,64,295,106.7C307.7,149,320,235,332,261.3C344.6,288,357,256,369,224C381.5,192,394,160,406,154.7C418.5,149,431,171,443,149.3C455.4,128,468,64,480,64C492.3,64,505,128,517,138.7C529.2,149,542,107,554,112C566.2,117,578,171,591,176C603.1,181,615,139,628,128C640,117,652,139,665,165.3C676.9,192,689,224,702,202.7C713.8,181,726,107,738,74.7C750.8,43,763,53,775,90.7C787.7,128,800,192,812,186.7C824.6,181,837,107,849,80C861.5,53,874,75,886,90.7C898.5,107,911,117,923,106.7C935.4,96,948,64,960,48C972.3,32,985,32,997,74.7C1009.2,117,1022,203,1034,213.3C1046.2,224,1058,160,1071,138.7C1083.1,117,1095,139,1108,165.3C1120,192,1132,224,1145,240C1156.9,256,1169,256,1182,261.3C1193.8,267,1206,277,1218,272C1230.8,267,1243,245,1255,208C1267.7,171,1280,117,1292,96C1304.6,75,1317,85,1329,122.7C1341.5,160,1354,224,1366,234.7C1378.5,245,1391,203,1403,176C1415.4,149,1428,139,1434,133.3L1440,128L1440,0L1433.8,0C1427.7,0,1415,0,1403,0C1390.8,0,1378,0,1366,0C1353.8,0,1342,0,1329,0C1316.9,0,1305,0,1292,0C1280,0,1268,0,1255,0C1243.1,0,1231,0,1218,0C1206.2,0,1194,0,1182,0C1169.2,0,1157,0,1145,0C1132.3,0,1120,0,1108,0C1095.4,0,1083,0,1071,0C1058.5,0,1046,0,1034,0C1021.5,0,1009,0,997,0C984.6,0,972,0,960,0C947.7,0,935,0,923,0C910.8,0,898,0,886,0C873.8,0,862,0,849,0C836.9,0,825,0,812,0C800,0,788,0,775,0C763.1,0,751,0,738,0C726.2,0,714,0,702,0C689.2,0,677,0,665,0C652.3,0,640,0,628,0C615.4,0,603,0,591,0C578.5,0,566,0,554,0C541.5,0,529,0,517,0C504.6,0,492,0,480,0C467.7,0,455,0,443,0C430.8,0,418,0,406,0C393.8,0,382,0,369,0C356.9,0,345,0,332,0C320,0,308,0,295,0C283.1,0,271,0,258,0C246.2,0,234,0,222,0C209.2,0,197,0,185,0C172.3,0,160,0,148,0C135.4,0,123,0,111,0C98.5,0,86,0,74,0C61.5,0,49,0,37,0C24.6,0,12,0,6,0L0,0Z"></path></svg>
             </div>
             
             <div id="third-page">
@@ -84,8 +82,16 @@
                         <input class="input" id="phone" type="phone" placeholder="(XXX)-XXX-XXX">
                         <label class="input-labels" for="message">Message</label>
                         <textarea class="input" id="message" type="text" placeholder="Write a message..."></textarea>
-                    </div>
+                        <div id="social-media">
+                            <h1 id="find-me">Find me in social media:</h1>
+                            <a href="https://www.linkedin.com/in/davidjoaosandoval/" target="_blank" class="fa fa-linkedin"></a>
+                            <a href="https://www.instagram.com/david.jso/?hl=en" target="_blank" class="fa fa-instagram"></a>
+                            <a href="https://twitter.com/tacodetripitas" target="_blank" class="fa fa-twitter"></a>
+                        </div>
+
+                    </div><br>
                 </div>
+
             </div>
         </div>
         
