working on contact form/need form to be sent to email

--- a/index.html
+++ b/index.html
@@ -46,22 +46,10 @@
                             </ul>
                             <p class="skills-desc">These skills helped me in bla bla bla projects to accomplish bla bla bla</p>
                         </div>
-                        <div id="project1-2">
-                            <div class="project-boxes" id="project1">
-                                <div class="pic-box" id="photo1">
-                                </div>
-                                <h1>JS Pixel Art</h1>
-                                <p>Description</p>
-                            </div>
-                            <div class="project-boxes" id="project2">
-                                <div class="pic-box" id="photo2"></div>
-                                <h1>Tic-tac-toe</h1>
-                                <p>Description</p>
-                            </div>
-                        </div>
                     </div>
                     <div class="project-boxes" id="project-side">
                         <div id="project3">
+                            <h1>MY PROJECTS</h1>    
                             <div class="pic-box" id="photo3"></div>
                             <h1>Tamagotchi</h1>
                             <p>Description</p>
@@ -69,19 +57,23 @@
                     </div>
                 </div>
             </div>
-            
             <div id="third-page">
                 <div id="third-pageoutline">
                     <div id="contact-area">
-                        <h1>Contact Me!</h1>
-                        <label class="input-labels" for="name">Full Name</label>
-                        <input class="input" id="name" type="text" placeholder="Name">
-                        <label class="input-labels" for="email">Email</label>
-                        <input class="input" id="email" type="email" placeholder="user@gmail.com">
-                        <label class="input-labels" for="phone">Phone</label>
-                        <input class="input" id="phone" type="phone" placeholder="(XXX)-XXX-XXX">
-                        <label class="input-labels" for="message">Message</label>
-                        <textarea class="input" id="message" type="text" placeholder="Write a message..."></textarea>
+                        <h1 id="contact-me">Contact Me!</h1>
+                        <h1 id="hide2" class="hide">Thank you for contacting me!</h1>
+                        <h1 id="hide1" class="hide"> I'll get in contact with you!</h1>
+                        <form id="form">
+                            <label id="full-name" class="input-labels" for="name">Full Name</label>
+                            <input class="input" id="name" type="text" placeholder="Name">
+                            <label id="text-email" class="input-labels" for="email">Email</label>
+                            <input class="input" id="email" type="email" placeholder="user@gmail.com">
+                            <label id="text-phone" class="input-labels" for="phone">Phone</label>
+                            <input class="input" id="phone" type="phone" placeholder="(XXX)-XXX-XXX">
+                            <label id="text-message" class="input-labels" for="message">Message</label>
+                            <textarea class="input" id="message" type="text" placeholder="Write a message..."></textarea>
+                            <button id="submit">Submit</button>
+                        </form>
                         <div id="social-media">
                             <h1 id="find-me">Find me in social media:</h1>
                             <a href="https://www.linkedin.com/in/davidjoaosandoval/" target="_blank" class="fa fa-linkedin"></a>
