--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body id="body">
     <div id="nav-bar">
         <div id="switchbar">
-            <p id="text-mode">Switch to Ligth Mode</p>
+            <p id="text-mode">Switch to Light Mode</p>
             <label id="light-mode" class="switch">
                 <input id="check" type="checkbox">
                 <span class="slider"></span>
