form submission fixed

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                         <h1 id="hide1" class="hide"> I'll get in contact with you!</h1>
                         <form action="https://formsubmit.co/davidsandoval596@gmail.com" method="POST" id="form">
                             <label id="full-name" class="input-labels" for="name">Full Name</label>
-                            <input class="input" id="name" type="text" placeholder="Name" required>
+                            <input class="input" id="name" name="name" type="text" placeholder="Name" required>
                             <label id="text-email" class="input-labels" for="email">Email</label>
-                            <input class="input" id="email" type="email" placeholder="user@gmail.com" required>
+                            <input class="input" id="email" name="email" type="email" placeholder="user@gmail.com" required>
                             <label id="text-phone" class="input-labels" for="phone">Phone</label>
-                            <input class="input" id="phone" type="phone" placeholder="(XXX)-XXX-XXX" required>
+                            <input class="input" id="phone" name="phone" type="phone" placeholder="(XXX)-XXX-XXX" required>
                             <label id="text-message" class="input-labels" for="message">Message</label>
-                            <textarea class="input" id="message" type="text" placeholder="Write a message..." required></textarea>
+                            <textarea class="input" id="message" name="message" type="text" placeholder="Write a message..." required></textarea>
                             <button type="submit" id="submit">Submit</button>
                         </form>
                         <div id="social-media">
